--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+body, html {
+ color: white;
+}
+
 .container {
   position: relative;
   top: 20px;
@@ -6,6 +10,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  cursor: pointer;
 }
 
 
