--- a/src/styles/Edit.css
+++ b/src/styles/Edit.css
@@ -11,7 +11,7 @@
   align-items: center;
   height: 100%;
 }
-
+/* 
 .todo-buttons {
   margin-right: 10px;
   padding: 10px;
@@ -19,5 +19,5 @@
   height: 43px;
   cursor: pointer;
   color: white;
-  background-color: #1e90ff;
-}
+  background-color: #CD7B7B;
+} */
