--- a/src/styles/Edit.css
+++ b/src/styles/Edit.css
@@ -11,6 +11,11 @@
   align-items: center;
   height: 100%;
 }
+.todo-container span {
+  margin-left: auto;
+  margin-right: 25px;
+}
+
 /* 
 .todo-buttons {
   margin-right: 10px;
