--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -13,7 +13,12 @@
     border-style: none;
     text-align: center;
   }
+
+  .buttonIn input:focus {
+    outline: none;
+  }
   
+
   .buttonIn button {
     position: absolute;
     top: 50%;
