--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -14,7 +14,6 @@
     text-align: center;
     font-weight: bold;
     font-size: 20px;
-    color:#d6d0d0
   }
 
   .buttonIn input:focus {
@@ -24,7 +23,7 @@
   ::placeholder {
     font-size: 17px; /* Replace with desired font size */
     font-weight: bold;
-    color: #eeb7b7;
+    color: white;
   }
 
   .buttonIn button {
