--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 body {
-    font-family: 'Vazirmatn', sans-serif;
-    font-weight: 800;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-weight: 800;
+  font-family: -apple-system, BlinkMacSystemFont, 'Vazirmatn', sans-serif,  'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
