--- a/src/styles/Timer.css
+++ b/src/styles/Timer.css
@@ -11,3 +11,40 @@
   .task {
     margin-top: 0px; /* Adjust the margin as needed */
   }
+
+  .button {
+    margin-right: 25px; /* Adjust the value to increase or decrease the spacing */
+  }
+  
+ 
+  .Timer {
+    border-radius: 5px;
+    height: 385px;
+  }
+  
+  #time {
+    font-size: 130px;
+    line-height: 0;
+  }
+  
+  .task {
+    margin-top: 0px; /* Adjust the margin as needed */
+  }
+  
+  .button {
+    margin-right: 25px; /* Adjust the value to increase or decrease the spacing */
+  }
+  
+  /* *it means the width should weather be equal to this number or lesser to take effect */
+  @media only screen and (max-width: 450px) {
+    .Timer {
+      border-radius: 5px;
+      height: 330px;
+    }
+  
+    #time {
+      font-size: 65px;
+      line-height: normal; /* Reset the line-height to its default value */
+    }
+  }
+  
