--- a/src/styles/Edit.css
+++ b/src/styles/Edit.css
@@ -3,26 +3,23 @@
   position: relative;
   background-color: #C95B6D;
   height: 70px;
+  border-radius: 5px;
 }
 
 .edit > div {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
   height: 100%;
 }
+
 .edit span {
   margin-left: auto;
   margin-right: 25px;
 }
 
-/* 
-.todo-buttons {
-  margin-right: 10px;
-  padding: 10px;
-  margin-left: 5px;
-  height: 43px;
-  cursor: pointer;
-  color: white;
-  background-color: #CD7B7B;
-} */
+@media only screen and (max-width: 450px) {
+  .edit > div {
+     padding-left: 35px;
+  }
+}
