--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -4,9 +4,20 @@
   list-style: none;
   padding: 0;
   margin: auto;
-  line-height: 50px;
+  line-height: 55px;
   text-align: center;
   font-weight: bold;
+  border-radius: 5px;
+}
+
+.firtItem:first-of-type {
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 5px;
+}
+
+.lastItem:last-of-type {
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 
@@ -15,7 +26,16 @@
   width: 250px;
 }
 
-/* 
+
 .menu li a {
   text-decoration: none;
-} */
+}
+
+
+@media only screen and (max-width: 450px) {
+  .menu {
+    line-height: 70px;
+  }
+}
+
+
