--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -1,36 +1,35 @@
-.buttonIn {
+.todoInput {
     margin-top: 20px;
     position: relative;
   }
   
-  .buttonIn input {
+  .todoInput input {
     box-sizing: border-box;
     text-align: right;
     width: 100%;
+    font-weight: bold;
+    font-size: 25px;
     /* outline: none; */
-    height: 70px;
+    height: 80px;
     border-radius: 5px;
     border-style: none;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-    color: white;
+    color: rgb(197, 164, 164);
   }
 
-  .buttonIn input:focus {
+  .todoInput input:focus {
     outline: none;
   }
   
-  ::placeholder {
-    padding-left: 40%;
-    font-size: 17px; /* Replace with desired font size */
+    
+  .todoInput input::placeholder {
+    font-size: 20px; /* Replace with desired font size */
     font-weight: lighter;
-    color: white;
-    margin-right: 70px;
-    color: #a39696;
+    color: #504848;
+    text-align: center;
   }
 
-  .buttonIn button {
+
+  .todoInput button {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -49,14 +48,14 @@
     border-color:#CD7B7B
   }
 
-  .edit span {
-    margin-left: auto;
-    margin-right: 25px;
-  }
-  
   @media only screen and (max-width: 450px) {
-   #clear {
-       width: 120px;
+    .todoInput button {
+      width: 30%;
     }
+
+    .todoInput input::placeholder {
+      margin-right: 70px;
+      text-align: right;
+    }
+
   }
-  
