--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -24,7 +24,7 @@
   .todoInput input::placeholder {
     font-size: 20px; /* Replace with desired font size */
     font-weight: lighter;
-    color: #504848;
+    color: #E2B2B2;
     text-align: center;
   }
 
