--- a/src/styles/Edit.css
+++ b/src/styles/Edit.css
@@ -18,8 +18,31 @@
   margin-right: 25px;
 }
 
+/* #editInput {
+  text-align: left;
+  outline: none;
+  border: none;
+  background-color: red;
+} */
+
+
+.editfield {
+  border: none;
+  background-color:#C46464;
+  color: white;
+  text-align: left;
+  outline: none;
+  border: none;
+}
+
+
+
 @media only screen and (max-width: 450px) {
   .edit > div {
      padding-left: 35px;
   }
+  #Gifi {
+    display: none;
+  }
 }
+
