--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,13 +4,21 @@
     left: 50%;
     width: 100%;
     margin-bottom: 25px;
-    border-radius: 5px;
 }
 
 
-.Header h3 {
+.h3 {
+  position: fixed;
+  top: 100px;
+  left: 100px;
+  margin-top: -50px;
+  margin-left: 450px;
+}
+
+
+/* .Header h3 {
    height: 30px;
-}
+} */
 
 
 /* .fill {
