--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,12 +7,15 @@
 }
 
 
-.h3 {
-  position: fixed;
-  top: 100px;
-  left: 100px;
-  margin-top: -50px;
-  margin-left: 450px;
+.h3Container  {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
